@@ -536,6 +536,23 @@ To answer in the negative, say {Qo':excl} "no, I refuse".</column>
       <column name="source">[1] {KGT:src}</column>
     </table>
     <table name="mem">
+      <!-- Checked on: 2013.12.27. -->
+      <column name="_id">13165</column>
+      <column name="entry_name">Daq'a'</column>
+      <column name="part_of_speech">n:deriv</column>
+      <column name="definition">jurisdiction, territory</column>
+      <column name="definition_de"></column>
+      <column name="synonyms"></column>
+      <column name="antonyms"></column>
+      <column name="see_also">{teblaw':n}, {yer:n}</column>
+      <column name="notes"></column>
+      <column name="hidden_notes"></column>
+      <column name="components">{Daq:n}, {-'a':n}</column>
+      <column name="examples">{tlhIngan wo' Daq'a' bo'elpu'!:sen} "You have entered the jurisdiction of the Klingon Empire."</column>
+      <column name="search_tags"></column>
+      <column name="source">[1] {Star Trek 2009 deleted scene:src}</column>
+    </table>
+    <table name="mem">
       <!-- Checked on: 2012.11.26. -->
       <column name="_id">13170</column>
       <column name="entry_name">DaQ</column>
