@@ -1725,7 +1725,9 @@ This verb is used to express the concept that two things have the same amount of
       <column name="antonyms"></column>
       <column name="see_also">{mun:v}, {Haq:v:2}</column>
       <column name="notes"></column>
-      <column name="hidden_notes">This is defined in {TKD:src} as "hinder, interfere" and in {TKDA:src} as "disrupt, interfere (with)".</column>
+      <column name="hidden_notes">This is defined in {TKD:src} as "hinder, interfere" and in {TKDA:src} as "disrupt, interfere (with)".
+
+{nISbogh Duj:n:nolink} was used to translate "Trespassing vessel" in a deleted scene from the 2009 {Star Trek:src} movie.</column>
       <column name="components"></column>
       <column name="examples">
 ▶ {labmeH 'evnagh Se' lo' tlhIngan QumwI'. janmey ngo' lulo'lu'DI' pIj jabbI'ID nISpu' woj.:sen:nolink}
