@@ -3593,7 +3593,9 @@ The Klingon equivalent to a phaser is a {nISwI':n}.</column>
       <column name="antonyms"></column>
       <column name="see_also">{qach:n}</column>
       <column name="notes">This word refers to the plan of a physical object, and not to a procedure or the plan for an event (which would be {nab:n}).</column>
-      <column name="hidden_notes">Augustus W. N. Pugin was an English architect who assisted in the design of the Palace of Westminster.</column>
+      <column name="hidden_notes">Augustus W. N. Pugin was an English architect who assisted in the design of the Palace of Westminster.
+
+The 2009 {Star Trek:src} movie has a deleted scene with the line: {buqmeylIjDaq DIvI' De' pu'jInmey... 'ach pu'jInmeylIj bIHbe'.:sen:nolink}</column>
       <column name="components"></column>
       <column name="examples"></column>
       <column name="search_tags"></column>
