@@ -1021,7 +1021,7 @@ This dialect is sort of half-way between the standard dialect and the {Qotmagh S
       <column name="definition_de"></column>
       <column name="synonyms"></column>
       <column name="antonyms"></column>
-      <column name="see_also">{meqba':n}, {loH:n}, {qum:n}</column>
+      <column name="see_also">{meqba':n}, {loH:n}, {qum:n}, {Daq'a':n}, {yer:n}</column>
       <column name="notes"></column>
       <column name="hidden_notes"></column>
       <column name="components"></column>
