@@ -290,7 +290,7 @@ The original line was to have been {logh veQDaq bachchugh, yoH 'e' toblaHbe' Suv
       <column name="antonyms"></column>
       <column name="see_also">{van:n}, {van:v:2}</column>
       <column name="notes"></column>
-      <column name="hidden_notes"></column>
+      <column name="hidden_notes">The 2009 {Star Trek:src} movie has a deleted scene with the line: {tIjwI'ghom bovanrupbe'chugh, vaj reQaw'.:sen:nolink}</column>
       <column name="components"></column>
       <column name="examples">
 ▶ {Hovmey Davan.:sen}</column>
