@@ -1,5 +1,6 @@
 CHANGELOG
 
+2013-12-27: Add lines from deleted scene from Star Trek (2009) movie.
 2013-12-23: Minor edits. German entries for {S}.
 2013-12-14: Added notes on Christmas and New Year.
 2013-12-05: Minor edits. Edit notes on {chuQun} and {qa'}. Fix bug with {nuq} and {'Iv} with suffixes.
